--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/anagar-logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anagar Foods</title>
+    <meta name="description" content="Anagar-Foods, your gateway to authentic Nigerian cuisine, delivered in bulk to your doorstep. We specialize in preserving the essence of Nigerian flavors through meticulous packaging, ensuring that each dish arrives as delectable as the moment it was crafted.">
   </head>
   <body>
     <div id="app"></div>
